feat: widen money fields to long, add wallet optimistic locking, JWT secret guard, rate limiting on auth endpoints, fix N+1 in payroll enrichment, paginate panen and pengiriman admin lists, move PembayaranService to application layer, add Midtrans HTTP timeouts, structured JSON logging with X-Request-Id